--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
     },   
     "require-dev": {
         "phpunit/phpunit": "^9.5",
-        "scrutinizer/ocular": "dev-master"
+        "scrutinizer/ocular": "dev-master",
+        "phpmetrics/phpmetrics": "^2.7"
     },
     "autoload-dev": {
         "psr-4": {
